cmake_minimum_required(VERSION 3.1)
project(transform)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
find_package(OpenCV REQUIRED)
include_directories($ENV{HOME}/proj/include)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(points points.cpp include/points.h)
target_link_libraries(points ${OpenCV_LIBS})

